--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
     <link href="/styles/font.css" rel="stylesheet">
   </head>
   <body>
+    <header></header>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+
     <h1>Write your code here</h1>
     <p>Put the CSS in separate files in the <code><big>src/styles</big></code> folder and link them in the html file</p>
     <script src="./bundle.js"></script>
