add media query to tablets

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <header class="header">
       <h1 class="header__title">All the news - All the time</h1>
       <h2>Welcome to my personal news outlet</h2>
-      <div class="header__buttons">
+      <nav class="header__buttons" hidden>
         <button class="header__button">Breaking</button>
         <button class="header__button">International</button>
         <button class="header__button">Sports</button>
-      </div>
+      </nav>
     </header>
     <main>
       <h2>Breaking news</h2>
