--- a/src/index.html
+++ b/src/index.html
@@ -25,22 +25,26 @@
           <img src="./assets/pictures/1.png " class="card__image" alt="Person in red beanie, colorful scarf, plaid coat,
           and sunglasses, against a bright yellow background.">
           <h3 class="card__title">Bold and Bright</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
                   <div class="card__footer">
                     <div class="card__buttons">
                       <button class="card__button">Read</button>
                       <button class="card__button">Share</button>
-                    </div>
+                    </div>  
+                    <p class="card__word-count">316 words</p>
                   </div>
         </article>
         <article class="card">
           <img src="./assets/pictures/2.png" class="card__image"
           alt="Woman in pink skirt, white sunglasses, and colorful headscarf, posing with a yellow background.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -48,11 +52,13 @@
           <img src="./assets/pictures/3.png" class="card__image"
           alt="Woman in zebra print outfit with orange sunglasses, posing in front of a yellow perforated wall.">
           <h3 class="card__title">Wild at Heart</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -60,11 +66,13 @@
           <img src="./assets/pictures/4.png" class="card__image"
           alt="Woman in red blazer with a black belt, wearing sunglasses, posing in front of a blue background.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -72,11 +80,13 @@
           <img src="./assets/pictures/5.png" class="card__image"
           alt="">
           <h3 class="card__title">Classic Power</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -84,11 +94,13 @@
           <img src="./assets/pictures/6.png" class="card__image"
           alt="Woman with braided hair, wearing a red jacket, posing in front of a teal background.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -96,11 +108,13 @@
           <img src="./assets/pictures/7.png" class="card__image"
           alt="Woman in pink blazer with pearl necklace, posing against an urban backdrop.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -108,11 +122,13 @@
           <img src="./assets/pictures/8.png" class="card__image"
           alt="Woman with pink hair in red and purple camo outfit, neon backdrop, striking a confident pose.">
           <h3 class="card__title">Neon Vibes</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -120,11 +136,13 @@
           <img src="./assets/pictures/9.png" class="card__image" alt="Man in red leather jacket and white beanie, posing with his back turned, red background.
           ">
           <h3 class="card__title">Red Revolution</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
                                     <div class="card__footer">
                                       <div class="card__buttons">
                                         <button class="card__button">Read</button>
                                         <button class="card__button">Share</button>
                                       </div>
+                                      <p class="card__word-count">316 words</p>
                                     </div>
         </article>
         <article class="card">
@@ -132,11 +150,13 @@
           <img src="./assets/pictures/10.png" class="card__image"
           alt="Woman in black Playboy sweatshirt, white sneakers, sitting against a red backdrop.">
           <h3 class="card__title">Casual Confidence</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -144,11 +164,13 @@
           <img src="./assets/pictures/11.png" class="card__image"
           alt="Woman in a red outfit, wearing a patterned headscarf and sunglasses, posed in profile against a red background.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
-              </div>
+              </div>  
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
         <article class="card">
@@ -156,11 +178,13 @@
           <img src="./assets/pictures/15.png" class="card__image"
           alt="Man wearing a silver jacket with futuristic sunglasses and headphones, against a bright red background.">
           <h3 class="card__title">Vibrant Elegance</h3>
+          <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
               <div class="card__buttons">
                 <button class="card__button">Read</button>
                 <button class="card__button">Share</button>
               </div>
+              <p class="card__word-count">316 words</p>
             </div>
         </article>
       </section>
