--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>CSS News</title>
     <link href="/styles/font.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/global.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -25,7 +28,6 @@
           <img src="./assets/pictures/1.png " class="card__image" alt="Person in red beanie, colorful scarf, plaid coat,
           and sunglasses, against a bright yellow background.">
           <div class="card__content">
-
             <h3 class="card__title">Bold and Bright</h3>
             <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
@@ -41,7 +43,6 @@
           <img src="./assets/pictures/2.png" class="card__image"
           alt="Woman in pink skirt, white sunglasses, and colorful headscarf, posing with a yellow background.">
           <div class="card__content">
-
             <h3 class="card__title">Vibrant Elegance</h3>
             <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente corrupti, nisi dicta non excepturi quasi exercitationem fuga!</p>
             <div class="card__footer">
