add style to titles

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <h1 class="header__title">All the news - All the time</h1>
-      <h2>Welcome to my personal news outlet</h2>
+      <h2 class="header__subtitle">Welcome to my personal news outlet</h2>
       <nav class="header__buttons">
         <button class="header__button">Breaking</button>
         <button class="header__button">International</button>
@@ -22,8 +22,8 @@
       </nav>
     </header>
     <main class="main">
-      <h2>Breaking news</h2>
       <section class="cards-container">
+        <h2 class="cards__title">Breaking news</h2>
         <article class="card">
           <img src="./assets/pictures/1.png " class="card__image" alt="Person in red beanie, colorful scarf, plaid coat,
           and sunglasses, against a bright yellow background.">
