add cards title to sessions

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+
     <header class="header">
       <h1 class="header__title">All the news - All the time</h1>
       <h2 class="header__subtitle">Welcome to my personal news outlet</h2>
@@ -24,7 +25,9 @@
         <button class="header__button">Sports</button>
       </nav>
     </header>
+
     <main class="main">
+
       <section class="cards-container">
         <h2 class="cards__title">Breaking news</h2>
 
@@ -121,6 +124,8 @@
       </section>
 
       <section>
+        <h2 class="cards__title">International News</h2>
+
         <article class="card">
           <img src="./assets/pictures/5.png" class="card__image" alt="" />
 
@@ -211,6 +216,8 @@
       </section>
 
       <section>
+        <h2 class="cards__title">Sport News</h2>
+
         <article class="card">
           <img
             src="./assets/pictures/9.png"
