add class to sections and style cards

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
         </article>
       </section>
 
-      <section>
+      <section class="cards-container">
         <h2 class="cards__title">International News</h2>
 
         <article class="card">
@@ -215,7 +215,7 @@
         </article>
       </section>
 
-      <section>
+      <section class="cards-container">
         <h2 class="cards__title">Sport News</h2>
 
         <article class="card">
