--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,11 @@
     <main class="main">
 
       <section class="cards-container">
-        <h2 class="cards__title">Breaking news</h2>
+        <h2 class="cards__title">Electric Street: Style in Full Color</h2>
 
         <article class="card">
           <img
-            src="./assets/pictures/1.png "
+            src="./assets/pictures/Y1.png "
             class="card__image"
             alt="Person in red beanie, colorful scarf, plaid coat,
           and sunglasses, against a bright yellow background."
@@ -56,13 +56,13 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/2.png"
+            src="./assets/pictures/Y2.png"
             class="card__image"
             alt="Woman in pink skirt, white sunglasses, and colorful headscarf, posing with a yellow background."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Vibrant Elegance</h3>
+            <h3 class="card__title">Retro Pop</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -79,13 +79,13 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/3.png"
+            src="./assets/pictures/Y3.png"
             class="card__image"
-            alt="Woman in zebra print outfit with orange sunglasses, posing in front of a yellow perforated wall."
+            alt="Person wearing a yellow striped sweater, with red hair and sunglasses, posing confidently against a yellow background."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Wild at Heart</h3>
+            <h3 class="card__title">Fierce Stripes</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -101,13 +101,13 @@
         </article>
         <article class="card">
           <img
-            src="./assets/pictures/4.png"
+            src="./assets/pictures/Y4.png"
             class="card__image"
-            alt="Woman in red blazer with a black belt, wearing sunglasses, posing in front of a blue background."
+            alt="Woman with long braids decorated with orange beads, wearing orange sunglasses and a vibrant outfit, posing against a yellow background."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Vibrant Elegance</h3>
+            <h3 class="card__title">Braided Power</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -124,13 +124,14 @@
       </section>
 
       <section class="cards-container">
-        <h2 class="cards__title">International News</h2>
+        <h2 class="cards__title">Black Excellence in Red</h2>
 
         <article class="card">
-          <img src="./assets/pictures/5.png" class="card__image" alt="" />
+          <img src="./assets/pictures/R1.png" class="card__image"
+            alt="Woman with long braids and multiple watches, against a red background." />
 
           <div class="card__content">
-            <h3 class="card__title">Classic Power</h3>
+            <h3 class="card__title">Luxury Braids</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -147,9 +148,9 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/6.png"
+            src="./assets/pictures/R2.png"
             class="card__image"
-            alt="Woman with braided hair, wearing a red jacket, posing in front of a teal background."
+            alt="Smiling person in a red and gold embroidered outfit, against a red background."
           />
 
           <div class="card__content">
@@ -170,13 +171,13 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/7.png"
+            src="./assets/pictures/R3.png"
             class="card__image"
-            alt="Woman in pink blazer with pearl necklace, posing against an urban backdrop."
+            alt="Man in a silver jacket and sunglasses, against a red background."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Vibrant Elegance</h3>
+            <h3 class="card__title">Futuristic Edge</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -193,13 +194,13 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/8.png"
+            src="./assets/pictures/R4.png"
             class="card__image"
-            alt="Woman with pink hair in red and purple camo outfit, neon backdrop, striking a confident pose."
+            alt="Woman in red with gold jewelry and headscarf, against a red background."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Neon Vibes</h3>
+            <h3 class="card__title">Scarlet Grace</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -216,18 +217,17 @@
       </section>
 
       <section class="cards-container">
-        <h2 class="cards__title">Sport News</h2>
+        <h2 class="cards__title"> The Ultimate Beauty Element</h2>
 
         <article class="card">
           <img
-            src="./assets/pictures/9.png"
+            src="./assets/pictures/B1.png"
             class="card__image"
-            alt="Man in red leather jacket and white beanie, posing with his back turned, red background.
-          "
+            alt="Woman smiling with braided hair."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Red Revolution</h3>
+            <h3 class="card__title">Natural Joy</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -244,13 +244,14 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/10.png"
+            src="./assets/pictures/B2.png"
             class="card__image"
-            alt="Woman in black Playboy sweatshirt, white sneakers, sitting against a red backdrop."
+            alt="Woman smiling with colorful eye makeup."
+
           />
 
           <div class="card__content">
-            <h3 class="card__title">Casual Confidence</h3>
+            <h3 class="card__title">Effortless Charm</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -267,13 +268,13 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/11.png"
+            src="./assets/pictures/B3.png"
             class="card__image"
-            alt="Woman in a red outfit, wearing a patterned headscarf and sunglasses, posed in profile against a red background."
+            alt="Woman smiling in a white shirt, short hair."
           />
 
           <div class="card__content">
-            <h3 class="card__title">Vibrant Elegance</h3>
+            <h3 class="card__title">Timeless Smile</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -290,13 +291,14 @@
 
         <article class="card">
           <img
-            src="./assets/pictures/15.png"
+            src="./assets/pictures/B4.png"
             class="card__image"
-            alt="Man wearing a silver jacket with futuristic sunglasses and headphones, against a bright red background."
+            alt="Woman smiling playfully with short curly hair."
+
           />
 
           <div class="card__content">
-            <h3 class="card__title">Vibrant Elegance</h3>
+            <h3 class="card__title">Radiant Simplicity</h3>
             <p class="card__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
               corrupti, nisi dicta non excepturi quasi exercitationem fuga!
@@ -312,12 +314,7 @@
         </article>
       </section>
     </main>
-
-    <h1>Write your code here</h1>
-    <p>
-      Put the CSS in separate files in the
-      <code><big>src/styles</big></code> folder and link them in the html file
-    </p>
+    <footer></footer>
     <script src="./bundle.js"></script>
   </body>
 </html>
