--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
     />
   </head>
   <body>
-
     <header class="header">
       <h1 class="header__title">All the news - All the time</h1>
       <h2 class="header__subtitle">Welcome to my personal news outlet</h2>
@@ -27,7 +26,6 @@
     </header>
 
     <main class="main">
-
       <section class="cards-container">
         <h2 class="cards__title">Electric Street: Style in Full Color</h2>
 
@@ -127,8 +125,11 @@
         <h2 class="cards__title">Black Excellence in Red</h2>
 
         <article class="card">
-          <img src="./assets/pictures/R1.png" class="card__image"
-            alt="Woman with long braids and multiple watches, against a red background." />
+          <img
+            src="./assets/pictures/R1.png"
+            class="card__image"
+            alt="Woman with long braids and multiple watches, against a red background."
+          />
 
           <div class="card__content">
             <h3 class="card__title">Luxury Braids</h3>
@@ -217,7 +218,7 @@
       </section>
 
       <section class="cards-container">
-        <h2 class="cards__title"> The Ultimate Beauty Element</h2>
+        <h2 class="cards__title">The Ultimate Beauty Element</h2>
 
         <article class="card">
           <img
@@ -247,7 +248,6 @@
             src="./assets/pictures/B2.png"
             class="card__image"
             alt="Woman smiling with colorful eye makeup."
-
           />
 
           <div class="card__content">
@@ -294,7 +294,6 @@
             src="./assets/pictures/B4.png"
             class="card__image"
             alt="Woman smiling playfully with short curly hair."
-
           />
 
           <div class="card__content">
